# api/hrapp_openapi.yaml
@@ -7,7 +7,9 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-  - url: https://localhost/v1
+  - url: http://localhost:4000
+security:
+  - cookieAuth: []
 tags:
   - name: Me
     description: APIs related to authenticated user
@@ -24,6 +26,7 @@ paths:
         - Authentication
       summary: Login
       operationId: login
+      security: []
       requestBody:
         required: true
         content:
@@ -50,6 +53,7 @@ paths:
         - Authentication
       summary: Logout
       operationId: logout
+      security: []
       responses:
         '200':
           description: Success
@@ -223,7 +227,7 @@ components:
     cookieAuth:
       type: apiKey
       in: cookie
-      name: hrsession
+      name: access_token
   schemas:
     Login:
       type: object
