# backend/main.go
@@ -6,15 +6,28 @@ import (
 
 	"github.com/adiwenak/hrapp/ent"
 	"github.com/adiwenak/hrapp/handlers"
+	"github.com/adiwenak/hrapp/middlewares"
 	"github.com/adiwenak/hrapp/server"
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
-
 	_ "github.com/lib/pq"
 )
 
-func main() {
+type Student struct {
+	Fname  string
+	Lname  string
+	City   string
+	Mobile int64
+}
 
+type Destination struct {
+	Fname    string
+	LastName string
+	City     string
+	Mobile   string
+}
+
+func main() {
 	client, err := ent.Open("postgres", "host=db port=5432 user=postgres dbname=postgres password=postgres sslmode=disable")
 	if err != nil {
 		log.Fatalf("failed opening connection to postgres", err)
@@ -33,10 +46,17 @@ func main() {
 		Validate: validator.New(),
 	}
 
+	oapiMiddlewares, err := middlewares.CreateOapiMiddlewares()
+	if err != nil {
+		log.Fatalf("failed to create middlewares: %s", err.Error())
+	}
+
+	router.Use(oapiMiddlewares)
+	router.Use(middlewares.CreateAuthenticatedUserMiddlewares(client))
 	coreStrictHandler := server.NewStrictHandler(core, nil)
 
 	server.RegisterHandlers(router, coreStrictHandler)
-
+	router.Static("/swagger", "./hrapp_openapi.html")
 	// server := rest_handlers.ServerInterfaceImpl{
 	// 	Client:   client,
 	// 	Validate: validator.New(),
