# backend/server/hrapp_types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package server
 
+const (
+	CookieAuthScopes = "cookieAuth.Scopes"
+)
+
 // Defines values for RequestGenerateVerificationCodeChannel.
 const (
 	Email  RequestGenerateVerificationCodeChannel = "email"
